Fixed layout bug caused by bad copy/paste in f66586f

--- a/themes/story-theme/docroot/_diffs/css/custom.css
+++ b/themes/story-theme/docroot/_diffs/css/custom.css
@@ -917,6 +917,7 @@ html {
 }
 
 .portlet-layout {
+	display: table;
 	margin-top: 0;
 }
 
